# sleekadthan-tauri

./: README.md  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: main.yml
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/elements/Cards/: SettingCard.jsx
src/elements/Logo/: Logo.jsx
src/elements/SoundControl/: SoundControl.jsx
