[package]
name = "sleekadthan-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-all", "notification", "notification-all", "path-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
rodio = "0.17.1"
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
